examples/test/testpolicy18602.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18602
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key24: value33
      key47: value44
      key20: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value25
          key22: value17
      podSelector:
        matchLabels:
          key20: value20
          key23: value22
